--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ coverage
 /vendor
 composer.phar
 .php_cs.cache
+.DS_Store
 
 # clean up some non bower ready package
 Resources/public/vendor/admin-lte/bootstrap
