--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ coverage
 composer.phar
 .php_cs.cache
 .DS_Store
+node_modules
 
 # clean up some non bower ready package
 Resources/public/vendor/admin-lte/bootstrap
