--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ composer.phar
 .php_cs.cache
 .DS_Store
 node_modules
+composer.lock
 
 # clean up some non bower ready package
 Resources/public/vendor/admin-lte/bootstrap
