--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,8 @@ composer.phar
 node_modules
 composer.lock
 
+data.db
+
 # clean up some non bower ready package
 Resources/public/vendor/admin-lte/bootstrap
 Resources/public/vendor/admin-lte/build
